Skapat några undersidor utan innehåll.
Skapat en navigeringsmeny i headern på förstasidan.

Skapat en utfällbar meny för små skärmar, med hjälp av JavaScript

Stylat navigeringsmenyn med CSS

--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,38 @@
 <!DOCTYPE html>
 <html lang="sv">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/main.css">
     <title>Moment 1</title>
     <script src="js/main.js" type="module"></script>
+    <script src="https://kit.fontawesome.com/df020c5b10.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
-    
+    <header>
+        <div class="topnav" id="myTopnav">
+            <a href="index.html" class="active">Logotyp</a>
+            <a href="index.html">Startsida</a>
+            <a href="bilder.html">Bilder</a>
+            <a href="omprocessen.html">Om arbetsprocessen</a>
+            <button class="icon" id="open-menu">
+                <span><i class="fa-solid fa-bars"></i></span>
+            </button>
+        </div>
+
+        <div class="sidenav" id="mySidenav">
+            <button class="icon" id="close-menu">
+                <span><i class="fa-solid fa-xmark"></i></span>
+            </button>
+            <a href="index.html">Startsida</a>
+            <a href="bilder.html">Bilder</a>
+            <a href="omprocessen.html">Om arbetsprocessen</a>
+        </div>
+    </header>
+
+
 </body>
+
 </html>
