Rensat bort några bilder och lagt resten i columns

--- a/src/bilder.html
+++ b/src/bilder.html
@@ -32,6 +32,18 @@
         </div>
     </header>
 
+    <div class="row">
+        <div class="column">
+            <img src="images/1.jpg">
+            <img src="images/2.jpg">
+            <img src="images/3.jpg">
+        </div>
+        <div class="column">
+            <img src="images/4.jpg">
+            <img src="images/5.png">
+            <img src="images/6.jpg">
+        </div>
+    </div>
 
 </body>
 
