--- a/src/bilder.html
+++ b/src/bilder.html
@@ -32,6 +32,8 @@
         </div>
     </header>
 
+    <h1 class="överskrift">BILDER</h1>
+
     <div class="row">
         <div class="column">
             <img src="images/1.jpg">
@@ -44,6 +46,15 @@
             <img src="images/6.jpg">
         </div>
     </div>
+
+    <footer>
+        <p>Författare: Anton Eriksson</p>
+        <a href="mailto:aner2308@student.miun.se">
+            <span><i class="fa-regular fa-envelope"></i></span>
+            <span>aner2308@student.miun.se</span>
+        </a>
+    </footer>
+
 
 </body>
 
