--- a/src/index.html
+++ b/src/index.html
@@ -32,6 +32,13 @@
         </div>
     </header>
 
+    <footer>
+        <p>Författare: Anton Eriksson</p>
+        <a href="mailto:aner2308@student.miun.se">
+            <span><i class="fa-regular fa-envelope"></i></span>
+            <span>aner2308@student.miun.se</span>
+        </a>
+    </footer>
 
 </body>
 
