--- a/src/bilder.html
+++ b/src/bilder.html
@@ -36,7 +36,12 @@
 
     <div class="row">
         <div class="column">
-            <img src="images/1.jpg">
+            <picture>
+                <source srcset="images/1.jpg?as=avif&width=800" type="image/avif" />
+                <source srcset="images/1.jpg?as=webp&width=800" type="image/webp" />
+                <source srcset="images/1.jpg?width=800" type="image/jpg" />
+                <img src="images/1.jpg" alt="Bild på Anton med en blomma bakom örat">
+            </picture>
             <img src="images/2.jpg">
             <img src="images/3.jpg">
         </div>
