Test av bredd på bild 1

--- a/src/bilder.html
+++ b/src/bilder.html
@@ -40,7 +40,7 @@
                 <source srcset="images/1.jpg?as=avif&width=800" type="image/avif" />
                 <source srcset="images/1.jpg?as=webp&width=800" type="image/webp" />
                 <source srcset="images/1.jpg?width=800" type="image/jpg" />
-                <img src="images/1.jpg" alt="Bild på Anton med en blomma bakom örat">
+                <img src="images/1.jpg?width=100" alt="Bild på Anton och Emma sittandes på stranden">
             </picture>
             <img src="images/2.jpg">
             <img src="images/3.jpg">
