Testar på nytt att bildhantera i parcel

--- a/src/bilder.html
+++ b/src/bilder.html
@@ -37,10 +37,10 @@
     <div class="row">
         <div class="column">
             <picture>
-                <source srcset="images/1.jpg?as=avif&width=800" type="image/avif" />
-                <source srcset="images/1.jpg?as=webp&width=800" type="image/webp" />
-                <source srcset="images/1.jpg?width=800" type="image/jpg" />
-                <img src="images/1.jpg?width=100" alt="Bild på Anton och Emma sittandes på stranden">
+                <source srcset="1.jpg?as=avif&width=800" type="image/avif" />
+                <source srcset="1.jpg?as=webp&width=800" type="image/webp" />
+                <source srcset="1.jpg?width=800" type="image/jpg" />
+                <img src="1.jpg?width=100" alt="Bild på Anton och Emma sittandes på stranden">
             </picture>
             <img src="images/2.jpg">
             <img src="images/3.jpg">
