Körde npm run start och löste problemet med bildredigeringen genom parcel. Yay!

--- a/src/bilder.html
+++ b/src/bilder.html
@@ -42,18 +42,43 @@
                 <source srcset="images/1.jpg?width=800" type="image/jpg">
                 <img src="images/1.jpg?width=100" alt="Bild på Anton och Emma sittandes på stranden">
             </picture>
-            <img src="images/2.jpg">
-            <img src="images/3.jpg">
+            <picture>
+                <source srcset="images/2.jpg?as=avif&width=800" type="image/avif">
+                <source srcset="images/2.jpg?as=webp&width=800" type="image/webp">
+                <source srcset="images/2.jpg?width=800" type="image/jpg">
+                <img src="images/2.jpg?width=100" alt="Bild på Anton med en blomma i håret">
+            </picture>
+            <picture>
+                <source srcset="images/3.jpg?as=avif&width=800" type="image/avif">
+                <source srcset="images/3.jpg?as=webp&width=800" type="image/webp">
+                <source srcset="images/3.jpg?width=800" type="image/jpg">
+                <img src="images/3.jpg?width=100" alt="Två hundar som nosar efter en lussebulle">
+            </picture>
         </div>
         <div class="column">
-            <img src="images/4.jpg">
-            <img src="images/5.png">
-            <img src="images/6.jpg">
+            <picture>
+                <source srcset="images/5.png?as=avif&width=800" type="image/avif">
+                <source srcset="images/5.png?as=webp&width=800" type="image/webp">
+                <source srcset="images/5.png?width=800" type="image/jpg">
+                <img src="images/5.png?width=100" alt="Två hundar som nosar efter en lussebulle">
+            </picture>
+            <picture>
+                <source srcset="images/6.jpg?as=avif&width=800" type="image/avif">
+                <source srcset="images/6.jpg?as=webp&width=800" type="image/webp">
+                <source srcset="images/6.jpg?width=800" type="image/jpg">
+                <img src="images/6.jpg?width=100" alt="Två hundar som nosar efter en lussebulle">
+            </picture>
+            <picture>
+                <source srcset="images/4.jpg?as=avif&width=800" type="image/avif">
+                <source srcset="images/4.jpg?as=webp&width=800" type="image/webp">
+                <source srcset="images/4.jpg?width=800" type="image/jpg">
+                <img src="images/4.jpg?width=100" alt="Två hundar som nosar efter en lussebulle">
+            </picture>
         </div>
     </div>
 
     <footer>
-        <p>Författare: Anton Eriksson</p>
+        <p>DT211G, frontend-baserad webbutveckling<br>Författare: Anton Eriksson</p>
         <a href="mailto:aner2308@student.miun.se">
             <span><i class="fa-regular fa-envelope"></i></span>
             <span>aner2308@student.miun.se</span>
