--- a/src/index.html
+++ b/src/index.html
@@ -32,6 +32,11 @@
         </div>
     </header>
 
+    <h1 class="överskrift">OM UPPGIFTEN</h1>
+
+    <p>Denna webbsida är skapad som en startplattform för uppgift 1 i kursen DT211G, Frontend-baserad webbutveckling.</p>
+    <p></p>
+
     <footer>
         <p>Författare: Anton Eriksson</p>
         <a href="mailto:aner2308@student.miun.se">
