Lagt till en responsiv storlek <400px och anpassat textstorlekar till den.
Har även lagt till en container för informationen på förstasidan

--- a/src/index.html
+++ b/src/index.html
@@ -34,8 +34,38 @@
 
     <h1 class="överskrift">OM UPPGIFTEN</h1>
 
-    <p>Denna webbsida är skapad som en startplattform för uppgift 1 i kursen DT211G, Frontend-baserad webbutveckling.</p>
-    <p></p>
+    <div id="container1">
+        <p>Denna webbsida är skapad som en startplattform för uppgift 1 i kursen DT211G, Frontend-baserad
+            webbutveckling.</p>
+        <p>Syftet med uppgiften är att: <br><br></p>
+
+        <ul>
+            <li>Få en inblick hur NodeJS kan användas för att underlätta arbetet med att utveckla en webbplats.</li>
+            <br>
+            <li>Kunna automatisera uppgifter med något kommandobaserat verktyg i NodeJs, med syfte att förenkla
+                utvecklingsarbetet av en webbplats.</li>
+            <br>
+            <li>Kunna skapa en automatiserad utvecklingsmiljö baserad på Git och NodeJs för att kunna göra
+                automatisk
+                publicering vid uppdatering av webbplatsen/Git-repot.</li>
+            <br>
+            <li>Kunna automatisera transpilering och minifiering av CSS, HTML och JavaScript samt automatiskt skapa
+                optimerade grafikfiler.</li>
+        </ul>
+        <p>
+            Under arbetets gång ska man versionshantera sin webbsida med hjälp av GitHub commits. Man skall också
+            automatisera vissa processer, bland annat publiceringen av webbsidan. Det skall också finnas en
+            .gitignore-fil.
+            Allt innehåll i den filen ska ignoreras när man versionshanterar i GitHub för att spara utrymme och inte
+            ladda
+            upp de tusentals filerna som inte behövs.
+
+            För att läsa mer om hur jag har löst denna uppgiften och vilka program som jag har använt mig av så kan du i
+            menyn navigera till undersidan "Om arbetsprocessen."<br><br>
+            Du kan också <a href="omprocessen.html">klicka här</a>.
+
+        </p>
+    </div>
 
     <footer>
         <p>Författare: Anton Eriksson</p>
