Påbörjad text om arbetsprocessen

--- a/src/omprocessen.html
+++ b/src/omprocessen.html
@@ -32,6 +32,20 @@
         </div>
     </header>
 
+    <h1 class="överskrift">OM PROCESSEN</h1>
+
+    <div id="container1">
+        <p>Det första jag gjorde var att öppna upp och damma av NodeJS. Jag hade inte jobbat i programmet sedan starten
+            av höstterminen 2023, och helt ärligt var det inte mycket jag kom ihåg. Direkt såg jag att det hade kommit
+            uppdateringar till programvaran så en uppdatering blev steg ett.
+            <br><br>
+            Steg två blev att öppna NodeJS kommandotolk och starta ett nytt NPM projekt. Jag skapade en mapp på
+            skrivbordet som jag öppnade upp i kommandotolken och skrev sedan in; npm init. Det gav mig en JSON-fil med
+            tillhörande struktur i min mapp. Jag öppnade mappen i Visual Studio Code och fortsatte arbetet där.
+            <br><br>
+            
+        </p>
+    </div>
 
 </body>
 
