Lade till sidfoten på sista undersidan

--- a/src/omprocessen.html
+++ b/src/omprocessen.html
@@ -74,6 +74,14 @@
             Och nu är vi här! Lite smartare, lite mer erfarna, och redo för nästa steg!
         </p>
     </div>
+    
+    <footer>
+        <p>DT211G, frontend-baserad webbutveckling<br>Författare: Anton Eriksson</p>
+        <a href="mailto:aner2308@student.miun.se">
+            <span><i class="fa-regular fa-envelope"></i></span>
+            <span>aner2308@student.miun.se</span>
+        </a>
+    </footer>
 
 </body>
 
