Snyggar till texten

--- a/src/index.html
+++ b/src/index.html
@@ -40,17 +40,18 @@
         <p>Syftet med uppgiften är att: <br><br></p>
 
         <ul>
-            <li>Få en inblick hur NodeJS kan användas för att underlätta arbetet med att utveckla en webbplats.</li>
-            <br>
+            <li>Få en inblick hur NodeJS kan användas för att underlätta arbetet med att utveckla en webbplats.<br><br>
+            </li>
+
             <li>Kunna automatisera uppgifter med något kommandobaserat verktyg i NodeJs, med syfte att förenkla
-                utvecklingsarbetet av en webbplats.</li>
-            <br>
+                utvecklingsarbetet av en webbplats.<br><br></li>
+
             <li>Kunna skapa en automatiserad utvecklingsmiljö baserad på Git och NodeJs för att kunna göra
                 automatisk
-                publicering vid uppdatering av webbplatsen/Git-repot.</li>
-            <br>
+                publicering vid uppdatering av webbplatsen/Git-repot.<br><br></li>
+
             <li>Kunna automatisera transpilering och minifiering av CSS, HTML och JavaScript samt automatiskt skapa
-                optimerade grafikfiler.</li>
+                optimerade grafikfiler.<br><br></li>
         </ul>
         <p>
             Under arbetets gång ska man versionshantera sin webbsida med hjälp av GitHub commits. Man skall också
