Skapat ny undersida för tabellen till uppgift 2

--- a/src/omprocessen.html
+++ b/src/omprocessen.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/main.css">
-    <title>Moment 1</title>
+    <title>Om processen</title>
     <script src="js/main.js" type="module"></script>
     <script src="https://kit.fontawesome.com/df020c5b10.js" crossorigin="anonymous"></script>
 </head>
@@ -17,6 +17,7 @@
             <a href="index.html">Startsida</a>
             <a href="bilder.html">Bilder</a>
             <a href="omprocessen.html">Om arbetsprocessen</a>
+            <a href="uppgift2.html">Uppgift 2</a>
             <button class="icon" id="open-menu">
                 <span><i class="fa-solid fa-bars"></i></span>
             </button>
@@ -29,6 +30,7 @@
             <a href="index.html">Startsida</a>
             <a href="bilder.html">Bilder</a>
             <a href="omprocessen.html">Om arbetsprocessen</a>
+            <a href="uppgift2.html">Uppgift 2 - ECMA-script</a>
         </div>
     </header>
 
