--- a/src/uppgift2.html
+++ b/src/uppgift2.html
@@ -37,37 +37,19 @@
     <h1 class="överskrift">UPPGIFT 2 - ECMA-SCRIPT</h1>
 
     <div id="container2">
-        <p>Denna webbsida är skapad som en startplattform för uppgift 1 i kursen DT211G, Frontend-baserad
-            webbutveckling.</p>
-        <p>Syftet med uppgiften är att: <br><br></p>
+        <table>
+            <thead>
+                <tr>
+                    <td>Kurskod</td>
+                    <td>Namn</td>
+                    <td>Progression</td>
+                </tr>
+            </thead>
+            <tbody id="kurserTabell"></tbody>
+        </table>
+        <div id="error">
 
-        <ul>
-            <li>Få en inblick hur NodeJS kan användas för att underlätta arbetet med att utveckla en webbplats.<br><br>
-            </li>
-
-            <li>Kunna automatisera uppgifter med något kommandobaserat verktyg i NodeJs, med syfte att förenkla
-                utvecklingsarbetet av en webbplats.<br><br></li>
-
-            <li>Kunna skapa en automatiserad utvecklingsmiljö baserad på Git och NodeJs för att kunna göra
-                automatisk
-                publicering vid uppdatering av webbplatsen/Git-repot.<br><br></li>
-
-            <li>Kunna automatisera transpilering och minifiering av CSS, HTML och JavaScript samt automatiskt skapa
-                optimerade grafikfiler.<br><br></li>
-        </ul>
-        <p>
-            Under arbetets gång ska man versionshantera sin webbsida med hjälp av GitHub commits. Man skall också
-            automatisera vissa processer, bland annat publiceringen av webbsidan. Det skall också finnas en
-            .gitignore-fil.
-            Allt innehåll i den filen ska ignoreras när man versionshanterar i GitHub för att spara utrymme och inte
-            ladda
-            upp de tusentals filerna som inte behövs.
-
-            För att läsa mer om hur jag har löst denna uppgiften och vilka program som jag har använt mig av så kan du i
-            menyn navigera till undersidan "Om arbetsprocessen."<br><br>
-            Du kan också <a href="omprocessen.html">klicka här</a>.
-
-        </p>
+        </div>
     </div>
 
     <footer>
