Startade arbetet med att skapa tre event handlers för att sortera tabellen

--- a/src/uppgift2.html
+++ b/src/uppgift2.html
@@ -34,15 +34,15 @@
         </div>
     </header>
 
-    <h1 class="överskrift">UPPGIFT 2 - ECMA-SCRIPT</h1>
+    <h1 class="överskrift">UPPGIFT 2<br>ECMA-SCRIPT</h1>
 
     <div id="container2">
         <table>
             <thead>
                 <tr>
-                    <td>Kurskod</td>
-                    <td>Namn</td>
-                    <td>Progression</td>
+                    <td id="kurskod">Kurskod</td>
+                    <td id="kursnamn">Namn</td>
+                    <td id="progression">Progression</td>
                 </tr>
             </thead>
             <tbody id="kurserTabell"></tbody>
