Sökrutans funktion är klar!

--- a/src/uppgift2.html
+++ b/src/uppgift2.html
@@ -36,7 +36,10 @@
 
     <h1 class="överskrift">UPPGIFT 2<br>ECMA-SCRIPT</h1>
 
+    
+
     <div id="container2">
+        <input type="text" id="searchbar" placeholder="Sök..">
         <table>
             <thead>
                 <tr>
