Stylat om tabellen och uppdaterat sidan med parcel (npm run build)

--- a/src/uppgift2.html
+++ b/src/uppgift2.html
@@ -39,7 +39,7 @@
     
 
     <div id="container2">
-        <input type="text" id="searchbar" placeholder="Sök..">
+        <input type="text" id="searchbar" placeholder="Sök efter kurs/kurskod...">
         <table>
             <thead>
                 <tr>
