Lagt till knapp för att återvända till topen av sidan. Har också lag till smooth scrolling på HTML i CSS-filen

--- a/src/bilder.html
+++ b/src/bilder.html
@@ -79,6 +79,8 @@
         </div>
     </div>
 
+    <button id="myBtn" title="Gå till toppen av sidan"><i class="fa-solid fa-angles-up"></i></button>
+
     <footer>
         <p>DT211G, frontend-baserad webbutveckling<br>Författare: Anton Eriksson</p>
         <a href="mailto:aner2308@student.miun.se">
