--- a/src/omprocessen.html
+++ b/src/omprocessen.html
@@ -76,6 +76,8 @@
             Och nu är vi här! Lite smartare, lite mer erfarna, och redo för nästa steg!
         </p>
     </div>
+
+    <button id="myBtn" title="Gå till toppen av sidan"><i class="fa-solid fa-angles-up"></i></button>
     
     <footer>
         <p>DT211G, frontend-baserad webbutveckling<br>Författare: Anton Eriksson</p>
