--- a/src/index.html
+++ b/src/index.html
@@ -70,6 +70,8 @@
         </p>
     </div>
 
+    <button id="myBtn" title="Gå till toppen av sidan"><i class="fa-solid fa-angles-up"></i></button>
+
     <footer>
         <p>Författare: Anton Eriksson</p>
         <a href="mailto:aner2308@student.miun.se">
