--- a/src/uppgift2.html
+++ b/src/uppgift2.html
@@ -55,6 +55,8 @@
         </div>
     </div>
 
+    <button id="myBtn" title="Gå till toppen av sidan"><i class="fa-solid fa-angles-up"></i></button>
+
     <footer>
         <p>Författare: Anton Eriksson</p>
         <a href="mailto:aner2308@student.miun.se">
